<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/drawer_language"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/drawer_language" />
        <item
            android:id="@+id/drawer_notifications"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/drawer_notifications" />
        <item
            android:id="@+id/drawer_privacy"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/drawer_privacy" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/drawer_about" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/drawer_logout" />
    </group>
</menu>
